update modal for Delete

--- a/Azmoonak/Areas/Admin/Views/Questions/Index.cshtml
+++ b/Azmoonak/Areas/Admin/Views/Questions/Index.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Areas/Admin/Views/Shared/_PanelLayout.cshtml";
 }
 
-<h1 class="text-center" style="color:#f50057">ثبت سوالات جدید</h1>
+<h1 class="text-center">ثبت سوالات جدید</h1>
 
 <p>
     <a asp-action="Create" class="btn btn-success me-4"><span class="fa fa-plus-circle fa-lg "></span> Create New</a>
@@ -76,11 +76,11 @@
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
-            <div class="modal-header bg-white">
+            <div class="modal-header">
                 @*<h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>*@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <div id="modalBody" class="modal-body bg-black">
+            <div id="modalBody" class="modal-body">
                 ...
             </div>
             @*<div class="modal-footer">
