--- a/Azmoonak/Views/Question/Index.cshtml
+++ b/Azmoonak/Views/Question/Index.cshtml
@@ -4,9 +4,5 @@
     Layout = "~/Views/Shared/_MainLayout.cshtml";
 }
 
+<h1>Index</h1>
 
-<div class="col-12 p-2">
-    @*slider*@
-    <partial name="bodypartial" />
-
-</div>
