add footer and update groupquestion in questioncontroller

--- a/Azmoonak/Views/Shared/Header.cshtml
+++ b/Azmoonak/Views/Shared/Header.cshtml
@@ -37,10 +37,7 @@
                         آزمون آنلاین
                         <div id="test-listmenu" class="hidden-testList d-flex rounded-1">
                             <ul>
-                                <li>آزمون word</li>
-                                <li>آزمون exel</li>
-                                <li>آزمون powerpoint</li>
-                                <li>آرمون c#</li>
+                                @*اینجا باید یک ویو جدید بسازم که بره توی صفحه دیگه و لیست امتحانات رو نشان بده دسته بندی های گروه*@
                             </ul>
                         </div>
                     </li>
