--- a/Azmoonak/Views/Shared/_MainLayout.cshtml
+++ b/Azmoonak/Views/Shared/_MainLayout.cshtml
@@ -14,10 +14,12 @@
 <body>
 
     <partial name="Header.cshtml" />
-
+    
     <div>
         @RenderBody()
     </div>
+
+    <partial name="Footer.cshtml" />
 
 </body>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
