--- a/Azmoonak/Views/Question/QuestionPartial.cshtml
+++ b/Azmoonak/Views/Question/QuestionPartial.cshtml
@@ -9,22 +9,19 @@
         <div class="bg-q">
             <form class="q-right" dir="rtl">
 
-              @*<h1>@item.QText</h1>
+              <h1>@item.QText</h1>
                 <span class="q-form"><input type="radio" name="fav_language">الف)@item.AnOne</span><hr>
                 <span class="q-form"><input type="radio" name="fav_language">ب)@item.AnTwo</span><hr>
                 <span class="q-form"><input type="radio" name="fav_language">ج)@item.AnThree</span><hr>
-                <span class="q-form"><input type="radio" name="fav_language"> )@item.AnFour</span><hr>*@
+                <span class="q-form"><input type="radio" name="fav_language">د)@item.AnFour</span><hr>
+                <span class="q-form"><input type="radio" name="fav_language">جواب درست)@item.CorrectAn</span><hr>
 
-                <h2>@item.QText</h2>
+
+                @*<h2>@item.QText</h2>
                 <span class="q-form">الف)@item.AnOne</span><hr>
                 <span class="q-form">ب)@item.AnTwo</span><hr>
                 <span class="q-form">ج)@item.AnThree</span><hr>
-                <span class="q-form">د)@item.AnFour</span><hr>
-
-              @*الف)@item.AnOne
-                ب)@item.AnTwo
-                ج)@item.AnThree
-                د)@item.AnFour*@
+                <span class="q-form">د)@item.AnFour</span><hr>*@
 
             </form>
         </div>
