--- a/Azmoonak/Areas/Admin/Views/Questions/Index.cshtml
+++ b/Azmoonak/Areas/Admin/Views/Questions/Index.cshtml
@@ -11,7 +11,7 @@
     <a asp-action="Create" class="btn btn-success me-4"><span class="fa fa-plus-circle fa-lg "></span> Create New</a>
 </p>
 <div class="col-12">
-    <table class="table table-striped table-hover rounded-5">
+    <table class="table table-striped table-dark rounded-5">
     <thead>
         <tr>
             <th>
