--- a/Azmoonak/Views/Question/QuestionPartial.cshtml
+++ b/Azmoonak/Views/Question/QuestionPartial.cshtml
@@ -9,19 +9,20 @@
         <div class="bg-q">
             <form class="q-right" dir="rtl">
 
-              <h1>@item.QText</h1>
+@*              <h2>@item.QText</h2>
                 <span class="q-form"><input type="radio" name="fav_language">الف)@item.AnOne</span><hr>
                 <span class="q-form"><input type="radio" name="fav_language">ب)@item.AnTwo</span><hr>
                 <span class="q-form"><input type="radio" name="fav_language">ج)@item.AnThree</span><hr>
                 <span class="q-form"><input type="radio" name="fav_language">د)@item.AnFour</span><hr>
-                <span class="q-form"><input type="radio" name="fav_language">جواب درست)@item.CorrectAn</span><hr>
+                <span class="q-form"><input type="radio" name="fav_language">جواب درست)@item.CorrectAn</span><hr>*@
 
 
-                @*<h2>@item.QText</h2>
-                <span class="q-form">الف)@item.AnOne</span><hr>
-                <span class="q-form">ب)@item.AnTwo</span><hr>
-                <span class="q-form">ج)@item.AnThree</span><hr>
-                <span class="q-form">د)@item.AnFour</span><hr>*@
+                <h2>@item.QText</h2>
+                <span class="q-form">الف) @item.AnOne</span><hr>
+                <span class="q-form">ب) @item.AnTwo</span><hr>
+                <span class="q-form">ج) @item.AnThree</span><hr>
+                <span class="q-form">د) @item.AnFour</span><hr>
+                <span class="q-form">جواب درست) @item.CorrectAn</span><hr>
 
             </form>
         </div>
