--- a/Azmoonak/Areas/Admin/Views/Groups/Index.cshtml
+++ b/Azmoonak/Areas/Admin/Views/Groups/Index.cshtml
@@ -11,7 +11,7 @@
     <a asp-action="Create" class="btn btn-success ms-1"><span class="fa fa-plus-circle fa-lg"></span> Create New</a>
 </p>
 <div>
-<table class="table table-hover table-striped" >
+<table class="table table-striped table-dark" >
     <thead>
         <tr>
             <th>
