edit view and color

--- a/Azmoonak/Views/Shared/Header.cshtml
+++ b/Azmoonak/Views/Shared/Header.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Azmoonak.Core.ViewModels.GroupQuestionViewModel
 
 <nav>
-    <div class="col-12 bg-black text-white d-flex justify-content-center ">
+    <div class="col-12 text-white d-flex justify-content-center bg-white" >
 
         @{
             if (User.Identity.IsAuthenticated)
