--- a/Azmoonak/Areas/Admin/Views/Questions/QuestionPartial.cshtml
+++ b/Azmoonak/Areas/Admin/Views/Questions/QuestionPartial.cshtml
@@ -1,18 +1,28 @@
 ﻿@model IEnumerable<Azmoonak.Database.Models.Question>
 
+
 <main>
 
     @foreach (var item in Model)
     {
         <!--related Question -->
         <div class="bg-q">
-            <form class="q-right">
-                <h1>@item.QText</h1>
+            <form class="q-right" dir="rtl">
 
-                <span class="q-form">الف)@item.AnOne</span><hr>
-                <span class="q-form">ب)@item.AnTwo</span><hr>
-                <span class="q-form">ج)@item.AnThree</span><hr>
-                <span class="q-form">د)@item.AnFour</span><hr>
+@*              <h2>@item.QText</h2>
+                <span class="q-form"><input type="radio" name="fav_language">الف)@item.AnOne</span><hr>
+                <span class="q-form"><input type="radio" name="fav_language">ب)@item.AnTwo</span><hr>
+                <span class="q-form"><input type="radio" name="fav_language">ج)@item.AnThree</span><hr>
+                <span class="q-form"><input type="radio" name="fav_language">د)@item.AnFour</span><hr>
+                <span class="q-form"><input type="radio" name="fav_language">جواب درست)@item.CorrectAn</span><hr>*@
+
+
+                <h2 class="q-question">@item.QText</h2>
+                <span class="q-form"><span class="q-alpha">الف)</span> @item.AnOne</span><hr>
+                <span class="q-form"><span class="q-alpha">ب)</span> @item.AnTwo</span><hr>
+                <span class="q-form"><span class="q-alpha">ج)</span> @item.AnThree</span><hr>
+                <span class="q-form"><span class="q-alpha">د)</span> @item.AnFour</span><hr>
+                <span class="q-form"><span class="q-alpha">جواب درست)</span>  @item.CorrectAn</span><hr>
 
             </form>
         </div>
