--- a/Azmoonak/wwwroot/Css/PanelStyle.css
+++ b/Azmoonak/wwwroot/Css/PanelStyle.css
@@ -285,11 +285,11 @@
 
 
 
-   /* برای بارگذاری سوالات کد های آریا*/
+/* برای بارگذاری سوالات کد های آریا*/
 
 .bg-q {
-    border:2px solid black;
-    background-color: rgb(224, 153, 0);
+    border: 2px solid orange;
+    background-color: #151515;
     padding: 100px;
     border-radius: 25px;
 }
@@ -297,11 +297,20 @@
 .q-form {
     display: block;
     font-size: 23px;
+    color: #f8a145;
 }
 
-    .q-form input {
-        font-size: 15px;
-    }
+.q-question {
+    color: #D8D9DA;
+}
+
+.q-alpha {
+    color: #D8D9DA;
+}
+
+.q-form input {
+    font-size: 15px;
+}
 
 .q-right {
     direction: rtl;
@@ -312,11 +321,10 @@
 }
 
 .q-right hr {
-    border-color: black;
+    border-color: orange;
 }
 
 .in-red {
-    background-color: red;
     border: none;
     font-size: 20px;
     padding-top: 7px;
