--- a/Azmoonak/Views/Home/BodyPartial.cshtml
+++ b/Azmoonak/Views/Home/BodyPartial.cshtml
@@ -1,23 +1,22 @@
-﻿    <!--_________header_____START______-->
-<!--___login__section___ -->
-<div class="register-buttons d-flex align-items-end justify-content-start">
-
-    <div class="group-login mb-5">
-
-        <button class="hover-btn btn-login me-3 border-0 text-white rounded-2">ورود</button>
-
-        <button class="hover-btn btn-register me-3 border-0 text-white rounded-2">ثبت نام</button>
-
+﻿
+<div class="header">
+    <!--_________header_____START______-->
+    <!--___login__section___ -->
+    <h1 id="text-autoType" class="bg-danger text-AutoType"></h1>
+    <div class="register-buttons d-flex align-items-end justify-content-start">
+        <div class="group-login mb-5">
+            <a asp-controller="profile" asp-action="Index" class="hover-btn btn-login me-3 border-0 text-white rounded-2">ورود</a>
+            <a asp-controller="account" asp-action="register" class="hover-btn btn-register me-3 border-0 text-white rounded-2">ثبت نام</a>
+        </div>
     </div>
 
-</div>
-<!--___background__headerImg__section__ -->
-<div class="background-header">
+    <!--___background__headerImg__section__ -->
+    <div class="background-header">
 
-    <img src="~/Image/Site/Slider/bg-online.jpg" alt="backgroundImg">
-</div>
-<!--___background__headerImg__section__ -->
+        <img src="~/Image/Site/Slider/bg-online.jpg" alt="backgroundImg">
     </div>
+    <!--___background__headerImg__section__ -->
+</div>
 <!--_________header_____END______-->
 <!--__________START____THE____TEST____Section_________-->
 <div class="container w-100 d-flex position-relative">
@@ -31,40 +30,47 @@
     </div>
 </div>
 
+
 <!--__________END____THE____TEST____Section_________-->
 <!--________START_____THE____view_____section_______-->
+
 
 <div class="container-fluid book my-4">
     <div class="row justify-content-center row-cols-3 row-cols-sm-1">
         <div class="col-12 col-sm-3 d-flex justify-content-center align-items-center div rounded-1 mx-auto ">
-            <div class="book-List bg-light rounded-2 p-3">
-                <a href="#"><span class="fa fa-book fnicon"></span></a><br>
-                <h3>لیست کتاب ها</h3>
+            <div class=" bg-light rounded-2 p-3">
+                <a href="#"><span class="fa fa-book fa-lg fnicon me-3"></span></a><br>
+                <h3 class="mt-3">لیست کتاب ها</h3>
             </div>
         </div>
         <div class="col-12 col-sm-3 d-flex justify-content-center align-items-center div  rounded-1 mx-auto my-2 my-md-0">
-            <div class="sample-question bg-light rounded-2 p-3">
-                <a href="#"><span class="fa fa-file-pdf pdf fnicon"></span></a><br>
-                <h3>لیست نمونه سوالات </h3>
+            <div class=" bg-light rounded-2 p-3">
+                <a href="#"><span class="fa fa-file-pdf-o fa-lg pdf fnicon me-4"></span></a><br>
+                <h3 class="mt-3">لیست نمونه سوالات </h3>
             </div>
         </div>
         <div class="col-12 col-sm-3 d-flex justify-content-center align-items-center div rounded-1 mx-auto ">
-            <div class="recent-visit bg-light rounded-2 p-3">
-                <a href="#"><span class="fa fa-signal fnicon"></span></a><br>
-                <h3>بازدید های اخیر</h3>
+            <div class=" bg-light rounded-2 p-3">
+                <a href="#"><span class="fa fa-signal fa-lg fnicon me-3"></span></a><br>
+                <h3 class="mt-3">بازدید های اخیر</h3>
             </div>
         </div>
     </div>
+
 
     <!--________END_____THE____view_____section_______-->
     <!--_______START_________THE________Introduction______section________-->
     <div class="container-fluid my-4">
         <div class="row row-cols-md-2">
 
+
             <!--در سایز مدیوم عنصر حذف میشود ولی در سایز گوشی و آی پد قابل نمایش است-->
             <div class="col-12 d-md-none introduction">
                 <img class="rounded-2" src="~/Image/Site/Slider/introduction.jpg" alt="Introduction">
             </div>
+
+
+
 
             <div class="col-12 col-md-6 introduction-text">
                 <p class="mx-5 mt-5">
@@ -81,24 +87,24 @@
         </div>
     </div>
 
+
     <!--_______END_________THE________Introduction______section________-->
     <!--_________START________Site____Status____Section_______-->
+
 
     <div class="container-fluid">
         <div class="row SiteStatus">
             <div class="col text-center align-self-center">
-                <span class="fa fa-user status-icons userSpan"></span><br>
+                <span class="fa fa-user fa-lg status-icons userSpan"></span><br>
                 <h4 class="mt-3">1234+</h4>
             </div>
             <div class="col text-center align-self-center">
-                <a href="#"><span class="fa fa-file-pdf-o "></span></a>
+                <a href="#"><span class="fa fa-lg status-icons fa-file-pdf-o "></span></a>
                 <h4 class="mt-3">1500+</h4>
             </div>
             <div class="col text-center align-self-center">
-                <a href="#"><span class="fa fa-book-open status-icons"></span></a>
+                <a href="#"><span class="fa fa-lg fa-book status-icons"></span></a>
                 <h4 class="mt-3">600+</h4>
             </div>
         </div>
     </div>
-
-   
