--- a/Azmoonak/Views/Shared/Header.cshtml
+++ b/Azmoonak/Views/Shared/Header.cshtml
@@ -1,34 +1,10 @@
 ﻿@model Azmoonak.Core.ViewModels.GroupQuestionViewModel
 
 <nav>
-    <div class="col-12 text-white d-flex justify-content-center bg-white" >
-
-        @{
-            if (User.Identity.IsAuthenticated)
-            {
-                <a asp-controller="profile" asp-action="Index" class="a3">
-                    <span class="fa fa-user text-warning"></span>
-                    <span> Profile</span>
-                </a>
-            }
-            else
-            {
-                <a asp-controller="account" asp-action="login">
-                    <span class="fa fa-sign-in"></span>
-                    <span> Login</span>
-                </a>
-
-            }
-        }
-
-@*        <a  asp-controller="admin" asp-action="Index">
-            <i class="fa fa-user fa-lg"></i>
-        </a>*@
-    </div>
     <div class="container-fluid contain my-0 my-md-3">
         <div class="row">
             <div class="col-4 col-md-3 Logo">
-                <a class="d-none d-md-inline-block" href="#"><img src="~/Image/Site/onlinexam-Logo.jpg" width="100" height="100" alt="onlinexam-Logo"></a>
+                <a class="d-none d-md-inline-block"><img src="~/Image/Site/onlinexam-Logo.jpg" width="100" height="100" alt="onlinexam-Logo"></a>
                 <i id="menubar" class="fa fa-bars d-md-none"></i>
             </div>
             <div class="d-none col-md-6 d-md-flex align-items-center">
