--- a/Azmoonak/wwwroot/Css/PanelStyle.css
+++ b/Azmoonak/wwwroot/Css/PanelStyle.css
@@ -1,285 +1,183 @@
-﻿    /*body {
-        font-family: vazir-bold;
-        direction:rtl;
+﻿
+
+
+.in-red {
+    border: none;
+    font-size: 20px;
+    padding-top: 7px;
+    padding-bottom: 7px;
+    padding-right: 8px;
+    padding-left: 8px;
+    border-radius: 6px;
+}
+
+.in-green {
+    background-color: rgb(11, 182, 11);
+    border: none;
+    font-size: 22px;
+    padding-top: 7px;
+    padding-bottom: 7px;
+    padding-right: 15px;
+    padding-left: 15px;
+    border-radius: 6px;
+    border-radius: 6px;
+}
+
+.bg-q .q-right .q-left a .in-green, .bg-q .q-right .q-left a .in-red {
+    transition: 400ms;
+}
+
+    .bg-q .q-right .q-left a .in-green:hover {
+        background-color: rgb(23, 79, 0);
     }
-    @font-face {
-        font-family: 'vazir-bold';
-        src: url('../fonts/vazir-bold.ttf') format('truetype');
-    }
-    .sidebar {
-        position: fixed;
-        background-color: #04151f;
-        min-height: 100svh;
-        max-height: 100svh;
-        border-radius: 5px;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        padding: 5px;   
-        direction: rtl;
-        transition: 0.5s;
+
+    .bg-q .q-right .q-left a .in-red:hover {
+        background-color: rgb(104, 0, 0);
     }
 
-        .sidebar a {
-            color: #ebebeb !important;
-            margin-top: 3px;
-            display: block;
-            padding: 5px 2px;
-            text-decoration: none;
-            transition: 0.5s;
-        }
 
 
-            .sidebar a span {
-                color: #f50057;
-                margin-left: 3px;
-                transition: 0.5s;
-            }
+@font-face {
+    font-family: 'vazir-bold';
+    src: url('../fonts/vazir-bold.ttf') format('truetype');
+}
 
-            .sidebar a:hover {
-                cursor: pointer;
-                background-color: #ebebeb;
-                color: black !important;
-            }
-    */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
 
+:root {
+    --blue: #2a2185;
+    --white: #fff;
+    --gray: #f5f5f5;
+    --blak1: #222;
+    --blak2: #999;
+}
+
+
+body {
+    font-family: vazir-bold;
+    direction: rtl;
+}
 
 
 
 
+.admin-containerr {
+    min-height: 100vh !important;
+    background-color: #2196f3;
+}
+
+.list-help-panel {
+    width: 100%;
+    margin-top: 27px;
+}
 
 
 
 
-    @font-face {
-        font-family: 'vazir-bold';
-        src: url('../fonts/vazir-bold.ttf') format('truetype');
-    }
-    * {
+    .list-help-panel li {
+        width: 100% !important;
+        padding: 10px;
         margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-    }
-
-
-    .renderbox {
-        position: absolute;
-        left: 0;
-        width: 1160px;
-        height: 100vh;
-        border-top: 20px solid var(--blue);
-        border-left: 20px solid var(--blue);
-        border-bottom: 20px solid var(--blue);
-    }
-
-    .exam{
-
-        border-radius:10px;
-        height:100%;
-        z-index:-2;
-    }
-
-
-
-    :root {
-        --blue: #2a2185;
-        --white: #fff;
-        --gray: #f5f5f5;
-        --blak1: #222;
-        --blak2: #999;
-    }
-
-
-
-
-    body {
-        font-family: vazir-bold;
-        direction: rtl;
-    }
-
-
-
-
-    .container {
         position: relative;
-        width: 100%;
+        margin-top: 20px;
+        margin-right:30px;
+        list-style-type:none;
     }
 
-
-
-
-    .navigation {
-        position: fixed;
-        width: 300px;
-        height: 100%;
-        right: 0;
-        background: var(--blue);
-        border-right: 10px solid var(--blue);
-        transition: 0.5s;
-        overflow: hidden;
-        z-index:100;
     
-    }
 
 
 
-
-        .navigation ul {
-            position: absolute;
-            right: 0;
-            top: 0;
-            width: 100%;
+        .list-help-panel li:hover {
+            background-color: var(--white);
+            border-bottom-right-radius: 14px;
+            border-top-right-radius: 14px;
         }
 
 
 
 
-            .navigation ul li {
-                position: relative;
-                width: 110%;
-                list-style: none;
-                border-top-right-radius: 30px;
-                border-bottom-right-radius: 30px;
-                z-index: 87;
+            .list-help-panel li:hover::before {
+                content: '';
+                position: absolute;
+                left: -4px;
+                top: -50px;
+                width: 50px;
+                height: 50px;
+                background-color: transparent;
+                border-radius: 50%;
+                transform: rotate(90deg);
+                box-shadow: 35px 35px 0 10px var(--white);
+                pointer-events: none;
             }
 
 
 
 
-                .navigation ul li:hover,
-                .navigation ul li.hovered {
-                    background-color: var(--white);
-                }
+            .list-help-panel li:hover::after {
+                content: '';
+                position: absolute;
+                left: -4px;
+                bottom: -50px;
+                width: 50px;
+                height: 50px;
+                background-color: transparent;
+                border-radius: 50%;
+                transform: rotate(-180deg);
+                box-shadow: 35px 35px 0 10px var(--white);
+                pointer-events: none;
+            }
 
 
 
 
-                .navigation ul li:nth-child(1) {
-                    margin-bottom: 40px;
-                    pointer-events: none;
-                }
+        .list-help-panel li a {
+            text-decoration: none;
+            display: block;
+            padding: 8px;
+            color: black;
+            margin-right: 4px;
+        }
 
 
 
 
-                .navigation ul li a {
-                    position: relative;
-                    display: block;
-                    width: 100%;
-                    padding-right: 16px;
-                    display: flex;
-                    text-decoration: none;
-                    color: var(--white);
-                }
-
-
-
-
-                .navigation ul li:hover a,
-                .navigation ul li.hovered a {
-                    color: var(--blue);
-                }
-
-
-
-
-                .navigation ul li a .icon {
-                    position: relative;
-                    display: block;
-                    line-height: 68px;
-                    text-align: center;
-                }
-
-
-
-
-                .navigation ul li a .icons {
-                    font-size: 1.3rem;
-                }
-
-
-
-
-                .navigation ul li a .title {
-                    position: relative;
-                    display: block;
-                    padding: 0 10px;
-                    line-height: 60px;
-                    text-align: start;
-                    white-space: nowrap;
-                }
-
-
-
-
-                .navigation ul li:hover a::before,
-                .navigation ul li.hovered a::before {
-                    content: '';
-                    position: absolute;
-                    left: -8px;
-                    top: -50px;
-                    width: 50px;
-                    height: 50px;
-                    background-color: transparent;
-                    border-radius: 50%;
-                    transform: rotate(90deg);
-                    box-shadow: 35px 35px 0 10px var(--white);
-                    pointer-events: none;
-                }
-
-
-
-
-                .navigation ul li:hover a::after,
-                .navigation ul li.hovered a::after {
-                    content: '';
-                    position: absolute;
-                    left: -8px;
-                    bottom: -50px;
-                    width: 50px;
-                    height: 50px;
-                    background-color: transparent;
-                    border-radius: 50%;
-                    transform: rotate(-180deg);
-                    box-shadow: 35px 35px 0 10px var(--white);
-                    pointer-events: none;
-                    z-index: 88;
-                }
+            .list-help-panel li a:hover {
+                color: orangered;
+            }
 
 
 
 
 
-
-
-
-
-
-
-                /*برای خودم*/
-
-.col-div-4-1 {
-    width: 33.3%;
-    float: left;
+.renderBox {
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px;
+    background-color: var(--white)
 }
 
-.box {
-    width: 88%;
-    height: 130px;
-    background-color: #e3e3e3;
-    margin-left: 10px;
-    padding: 10px;
-    box-shadow: 2px 5px 10px #ddd;
-    position: relative;
-    border-radius: 15px;
+
+
+
+.null {
+    min-height: 100vh;
+    border-bottom-left-radius: 10px;
+    border-top-left-radius: 10px;
+    background-color: var(--white);
 }
 
-    .box p {
-        color: #348f6c;
-        font-weight: 500;
-        padding-left: 10px;
-    }
+
+
+
+.panel-help {
+    background-color: #2196f3;
+}
+
 
 
 
@@ -323,37 +221,3 @@
 .q-right hr {
     border-color: orange;
 }
-
-.in-red {
-    border: none;
-    font-size: 20px;
-    padding-top: 7px;
-    padding-bottom: 7px;
-    padding-right: 8px;
-    padding-left: 8px;
-    border-radius: 6px;
-}
-
-.in-green {
-    background-color: rgb(11, 182, 11);
-    border: none;
-    font-size: 22px;
-    padding-top: 7px;
-    padding-bottom: 7px;
-    padding-right: 15px;
-    padding-left: 15px;
-    border-radius: 6px;
-    border-radius: 6px;
-}
-
-.bg-q .q-right .q-left a .in-green, .bg-q .q-right .q-left a .in-red {
-    transition: 400ms;
-}
-
-    .bg-q .q-right .q-left a .in-green:hover {
-        background-color: rgb(23, 79, 0);
-    }
-
-    .bg-q .q-right .q-left a .in-red:hover {
-        background-color: rgb(104, 0, 0);
-    }
