--- a/Azmoonak/Areas/Admin/Views/Shared/_PanelLayout.cshtml
+++ b/Azmoonak/Areas/Admin/Views/Shared/_PanelLayout.cshtml
@@ -19,23 +19,23 @@
 
                     <li>
                         <a asp-area="" asp-controller="home" asp-action="index">
-                            <span class="icon">
-                                <i class="fa fa-home icons"></i>
+                            <span class="icons">
+                                <i class="fa fa-home fa-lg icons"></i>
                             </span>
                             <span class="title">خانه</span>
                         </a>
                     </li>
                     <li>
                         <a asp-area="admin" asp-controller="panel" asp-action="index">
-                            <span class="icon">
+                            <span class="icons">
                                 <i class="fa fa-dashboard fa-lg"></i>
                             </span>
                             <span class="title">داشبورد مدیر</span>
                         </a>
                     </li>
                     <li>
-                        <a>
-                            <span class="icon">
+                        <a href="#">
+                            <span class="icons">
                                 <i class="fa fa-users fa-lg"></i>
                             </span>
                             <span class="title">کاربران</span>
@@ -43,7 +43,7 @@
                     </li>
                     <li>
                         <a asp-controller="Groups" asp-action="Index">
-                            <span class="icon">
+                            <span class="icons">
                                 <i class="fa fa-list fa-lg" class="fa fa-list fa-lg"></i>
                             </span>
                             <span class="title">دسته بندی ها</span>
@@ -51,15 +51,15 @@
                     </li>
                     <li>
                         <a asp-controller="questions" asp-action="index">
-                            <span class="icon">
+                            <span class="icons">
                                 <i class="fa fa-book fa-lg"></i>
                             </span>
                             <span class="title">سوالات</span>
                         </a>
                     </li>
                     <li>
-                        <a>
-                            <span class="icon">
+                        <a href="#">
+                            <span class="icons">
                                 <i class="fa fa-gears fa-lg"></i>
                             </span>
                             <span class="title">تنظیمات</span>
@@ -67,7 +67,7 @@
                     </li>
                     <li>
                         <a asp-area="" asp-controller="account" asp-action="logout">
-                            <span class="icon">
+                            <span class="icons">
                                 <i class="fa fa-sign-out fa-lg"></i>
                             </span>
                             <span class="title">خروج</span>
