--- a/Azmoonak/Views/Exam/QuestionPartial.cshtml
+++ b/Azmoonak/Views/Exam/QuestionPartial.cshtml
@@ -1,28 +1,6 @@
-﻿@*@model IEnumerable<Azmoonak.Database.Models.Question>
+﻿@model IEnumerable<Azmoonak.Database.Models.Question>
 
-
-<form asp-controller="exam" asp-action="StartExam" class="q-right" dir="rtl">
-    @for (int i = 0; i < Model.Count(); i++)
-    {
-        <!--related Question -->
-        <div class="bg-q">
-
-            <h2 class="q-question">@Model.ElementAt(i).QText</h2>
-            <span class="q-form"><input type="radio" name="fav_language">الف)@Model.ElementAt(i).AnOne</span><hr>
-            <span class="q-form"><input type="radio" name="fav_language">ب)@Model.ElementAt(i).AnTwo</span><hr>
-            <span class="q-form"><input type="radio" name="fav_language">ج)@Model.ElementAt(i).AnThree</span><hr>
-            <span class="q-form"><input type="radio" name="fav_language">د)@Model.ElementAt(i).AnFour</span><hr>
-            
-        </div>
-    }
-
-    <button type="submit">ارسال</button>
-</form>*@
-
-
-
-@model IEnumerable<Azmoonak.Database.Models.Question>
-<form asp-controller="exam" asp-action="StartExam" class="q-right" dir="rtl">
+<form asp-controller="exam" asp-action="EndExam" class="q-right" dir="rtl">
     @for (int i = 0; i < Model.Count(); i++)
     {
         <!--related Question -->
@@ -34,7 +12,17 @@
             <span class="q-form"><span class="q-alpha"><input type="radio" id="anthree" name="browser" onclick="myFunction(this.value)" value="@Model.ElementAt(i).AnThree">ج) @Model.ElementAt(i).AnThree </span></span><hr>
             <span class="q-form"><span class="q-alpha"><input type="radio" id="anfour" name="browser" onclick="myFunction(this.value)" value="@Model.ElementAt(i).AnFour">د) @Model.ElementAt(i).AnFour </span></span><hr>
 
-            <span class="q-form"><input type="text" id="result">جواب کاربر)</span><hr>
+            @* <span class="q-form"><input type="text" id="result">جواب کاربر)</span><hr> *@
+
+            <input name="[@i].Id" value="@Model.ElementAt(i).Id" readonly hidden>
+            <input name="[@i].QText" value="@Model.ElementAt(i).QText" readonly hidden>
+            <input name="[@i].AnOne" value="@Model.ElementAt(i).AnOne" readonly hidden>
+            <input name="[@i].AnTwo" value="@Model.ElementAt(i).AnTwo" readonly hidden>
+            <input name="[@i].AnThree" value="@Model.ElementAt(i).AnThree" readonly hidden>
+            <input name="[@i].AnFour" value="@Model.ElementAt(i).AnFour" readonly hidden>
+            <input name="[@i].CorrectAn" value="@Model.ElementAt(i).CorrectAn" readonly hidden>
+            <input name="[@i].UserAn" value="@Model.ElementAt(i).UserAn">
+            <input name="[@i].Group" value="@Model.ElementAt(i).GroupId" readonly hidden>
 
         </div>
     }
